tried to fix scrollbar, reverted

--- a/ui/src/components/Navigation/style.css
+++ b/ui/src/components/Navigation/style.css
@@ -17,10 +17,11 @@
 .nav_page {
   color: white;
   font-size: 1.3rem;
-  padding: 5px 20px 0px 20px;
+  padding: 0px 20px 0px 20px;
   text-align: end;
-  /* letter-spacing: 2px; */
+  letter-spacing: 1.5px;
   text-decoration: none !important;
+  margin: 0;
 }
 
 .logo_container {
